# ami-lwm2m-node

./: .gitignore  CMakeLists.txt  Kconfig  prj.conf
.context/: ESTADO.md  README.md
boards/: xiao_esp32c6_hpcore.overlay
docs/: PROVISIONING.md  dlms_rs485_architecture.md  documento_ejecutivo_nodo_gateway.tex
models/: 10483.xml  10484.xml  10485.xml  10486.xml  33000.xml
results/: benchmark_v0141_log.txt  latency_20260223_131058_delay3000ms_10rounds.csv  latency_20260223_154752_delay5000ms_10rounds.csv  latency_20260223_204618_delay5000ms_10rounds.csv  latency_20260223_215325_delay5000ms_10rounds.csv  latency_20260224_122255_delay5000ms_10rounds.csv  test_results_v016.txt
src/: dlms_cosem.c  dlms_cosem.h  dlms_hdlc.c  dlms_hdlc.h  dlms_meter.c  dlms_meter.h  firmware_update.c  lwm2m_obj_power_meter.c  lwm2m_obj_power_meter.h  lwm2m_obj_thread_cli.c  lwm2m_obj_thread_cli.h  lwm2m_obj_thread_commission.c  lwm2m_obj_thread_commission.h  lwm2m_obj_thread_diag.h  lwm2m_obj_thread_neighbor.c  lwm2m_obj_thread_neighbor.h  lwm2m_obj_thread_net.c  lwm2m_obj_thread_net.h  main.c  rs485_uart.c  rs485_uart.h  thread_conn_monitor.c
tests/: README.md  run_tests  test_cosem.c  test_dlms_logic.c  test_framework.h  test_hdlc.c  test_main.c
tools/: _check_status.py  _combine_results.py  ami_watchdog.py  ami_watchdog_scheduler.ps1  analyze_benchmark_v2.py  analyze_failures.py  analyze_regression.py  benchmark_10s_deep.py  benchmark_lwm2m.py  check_edge_server.py  check_edge_status.py  check_keys.py  check_rate.py  check_status.py  diag_504_analysis.ps1  diag_read_latency.ps1  (+16 more)
(+214 files in other folders)
